--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -5,6 +5,6 @@ spring.datasource.username=root
 #DB password
 spring.datasource.password=mysql2022
 #Tells to keep existing data and table while server restart, other value is create where after server restarts all the tables will be dropped and new tables will be cre
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create
 
 
